<resources>
    <string name="app_name">myBuddy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sad">sad</string>
    <string name="Happy">Happy</string>
    <string name="Angry">Angry</string>
    <string name="Sleepy">Sleepy</string>
    <string name="Worried">Worried</string>
    <string name="Overwhelmed">Overwhelmed</string>
</resources>
